--- a/index.html
+++ b/index.html
@@ -111,31 +111,31 @@
                     <div style="margin-bottom: 10px;">
                         <label>Elbow:</label>
                         <select name="leftElbow" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <label>Wrist:</label>
                         <select name="leftWrist" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div>
                         <label>Finger:</label>
                         <select name="leftFinger" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                 </div>
@@ -148,31 +148,31 @@
                     <div style="margin-bottom: 10px;">
                         <label>Hip:</label>
                         <select name="leftHip" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <label>Knee:</label>
                         <select name="leftKnee" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div>
                         <label>Ankle:</label>
                         <select name="leftAnkle" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                 </div>
@@ -189,31 +189,31 @@
                     <div style="margin-bottom: 10px;">
                         <label>Elbow:</label>
                         <select name="rightElbow" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <label>Wrist:</label>
                         <select name="rightWrist" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div>
                         <label>Finger:</label>
                         <select name="rightFinger" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                 </div>
@@ -226,31 +226,31 @@
                     <div style="margin-bottom: 10px;">
                         <label>Hip:</label>
                         <select name="rightHip" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 10px;">
                         <label>Knee:</label>
                         <select name="rightKnee" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                     <div>
                         <label>Ankle:</label>
                         <select name="rightAnkle" required>
-                            <option value="1">1 - Trace</option>
-                            <option value="2">2 - Poor</option>
-                            <option value="3">3 - Fair</option>
-                            <option value="4">4 - Good</option>
-                            <option value="5" selected>5 - Normal</option>
+                            <option value="1">1 - 可見肌肉收縮</option>
+                            <option value="2">2 - 水平移動可完成關節活動</option>
+                            <option value="3">3 - 對抗地心引力可完成關節活動</option>
+                            <option value="4">4 - 對抗阻力可完成關節活動</option>
+                            <option value="5" selected>5 - 正常肌力</option>
                         </select>
                     </div>
                 </div>
